testing/templates/peerauth.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: echo-server
spec:
  mtls:
    mode: STRICT
