testing/templates/deployment-echo-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-server
  namespace: echo-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-server
  template:
    metadata:
      labels:
        app: echo-server
      annotations:
        sidecar.istio.io/inject: "true" # Ensure sidecar injection
    spec:
      containers:
        - name: echo-server
          image: python:3.9-slim
          ports:
            - containerPort: 8080
          command: ["python", "-m", "http.server", "8080"]
