testing/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-server
  namespace: echo-server
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    # If you need HTTPS:
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: vault-issuer
spec:
  rules:
    - host: echo.127.0.0.1.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo-server
                port:
                  number: 80
  tls:
    - hosts:
        - echo.127.0.0.1.sslip.io
      secretName: echo-server-tls
